--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -205,58 +205,26 @@ header {
         top: 0;
         left: 0;
 
-        .swiper {
-            width: 100%;
-            height: 150px;
-            margin: 20px 0 0 0;
-        }
+        transition: transform .2s ease-in-out;
 
         &.meal-cat {
             background-color: $color-meal-bg;
+            transform: translateX(-100%);
+
+            &.selected {
+                transform: translateX(0%);
+            }
+            z-index: 3;
         }
 
         &.beer-cat {
             background-color: $color-beer-bg;
-        }
+            transform: translateX(100%);
 
-        &.ng-hide-add, &.ng-hide-remove {
-            @include transition(transform .2s);
-        }
-
-        &.meal-cat {
-            &.ng-hide-add {
-                @include transform(translateX(0%));
-
-                &.ng-hide-add-active {
-                    @include transform(translateX(-100%));
-                }
+            &.selected {
+                transform: translateX(0%);
             }
-
-            &.ng-hide-remove {
-                @include transform(translateX(-100%));
-
-                &.ng-hide-remove-active {
-                    @include transform(translateX(0%));
-                }
-            }
-        }
-
-        &.beer-cat {
-            &.ng-hide-add {
-                @include transform(translateX(0%));
-
-                &.ng-hide-add-active {
-                    @include transform(translateX(100%));
-                }
-            }
-
-            &.ng-hide-remove {
-                @include transform(translateX(100%));
-
-                &.ng-hide-remove-active {
-                    @include transform(translateX(0%));
-                }
-            }
+            z-index: 2;
         }
     }
 }
