LB-43 Added AdMob for iOS

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -866,6 +866,10 @@ main.ready {
     display: none;
 }
 
+.cordova .result {
+    min-height: calc(100% - 50px);
+}
+
 
 @media screen and #{$rwdDesktop} {
     body {
