--- a/app/views/main.html
+++ b/app/views/main.html
@@ -53,6 +53,8 @@
     </footer>
 </div>
 
+<mealshaker-add visible="venue"></mealshaker-add>
+
 <div class="dialog" ng-if="dialog.text" ng-class="currentCategory + '-cat'">
     <div class="dialog-container">
         <div class="dialog-header"><span ng-click="hideDialog()" class="close">&times;</span></div>
