--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -200,31 +200,30 @@ header {
 .swipe-container {
     position: absolute;
 
+    &.mealshaker-draggable-transition {
+        transition: transform .2s ease-in-out;
+
+        &.meal-cat-container {
+            transform: translate3D(0, 0, 0);
+        }
+
+        &.beer-cat-container {
+            transform: translate3D(-100%, 0, 0);
+        }
+    }
+
     .swipe-item {
         position: absolute;
         top: 0;
         left: 0;
 
-        transition: transform .2s ease-in-out;
-
         &.meal-cat {
             background-color: $color-meal-bg;
-            transform: translateX(-100%);
-
-            &.selected {
-                transform: translateX(0%);
-            }
-            z-index: 3;
         }
 
         &.beer-cat {
             background-color: $color-beer-bg;
-            transform: translateX(100%);
-
-            &.selected {
-                transform: translateX(0%);
-            }
-            z-index: 2;
+            transform: translate3D(100%, 0, 0);
         }
     }
 }
@@ -704,6 +703,7 @@ $settings: .3s ease-in;
 main.ready {
     @include transform-style(preserve-3d);
     @include backface-visibility(hidden);
+    background: white;
 
     &.flip-right {
         &.ng-enter {
@@ -752,7 +752,7 @@ main.ready {
     .result, .main {
         &.ng-hide-add, &.ng-hide-remove {
             display: block !important;
-            @include transition(opacity .3s !important);
+            transition: opacity .3s !important;
         }
 
         &.ng-hide-add {
@@ -796,7 +796,7 @@ main.ready {
 
     &.ng-enter, &.ng-leave {
         display: block !important;
-        @include transition(opacity .3s !important);
+        transition: opacity .3s !important;
     }
 
     &.ng-leave {
@@ -866,8 +866,22 @@ main.ready {
     display: none;
 }
 
+.mealshaker-add-placeholder {
+    display: none;
+}
+
 .cordova .result {
     min-height: calc(100% - 50px);
+
+    .mealshaker-add-placeholder {
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 50px;
+        left: 0;
+        bottom: -50px;
+        background: black;
+    }
 }
 
 
