LB-46 Fixed swiping over the slider

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,7 +14,7 @@
 
                 <div class="distance">
                     Search range: <strong>{{search.distance | format_distance}}</strong>
-                    <rzslider rz-slider-floor="200" rz-slider-ceil="20000" rz-slider-model="search.distance" rz-slider-step="100" rz-slider-precision="0"></rzslider>
+                    <rzslider cant-swipe-this rz-slider-floor="200" rz-slider-ceil="20000" rz-slider-model="search.distance" rz-slider-step="100" rz-slider-precision="0"></rzslider>
                 </div>
             </footer>
         </div>
