--- a/app/styles/rzslider.scss
+++ b/app/styles/rzslider.scss
@@ -1,9 +1,9 @@
 rzslider {
   position: relative;
-  display: inline-block;
+  display: block;
   width: 100%;
-  height: 24px;
-  margin: 15px 0;
+  height: 50px;
+  margin: 15px 0 0 0;
   overflow: hidden;
 }
 
@@ -25,7 +25,7 @@ rzslider span.bar {
   height: 4px;
   background: white;
   border-radius: 2px;
-  top: 10px;
+  top: 13px;
 }
 
 rzslider span.bar.selection {
@@ -36,12 +36,12 @@ rzslider span.bar.selection {
 
 rzslider span.pointer {
   z-index: 2;
-  width: 24px;
-  height: 24px;
+  width: 30px;
+  height: 30px;
   cursor: pointer;
-  border-radius: 24px;
-  background: url(../images/icon-slider.png) no-repeat 50% 50% white;
-  background-size: 20px 20px;
+  border-radius: 30px;
+  background: url(../images/icon-slider.png) no-repeat 50% 50% transparent;
+  background-size: 24px 24px;
 }
 
 rzslider span.bubble {
