Fix cache invalidation and add touch improvements

--- a/app/views/info.html
+++ b/app/views/info.html
@@ -4,7 +4,7 @@
     </header>
     <div class="inside">
         <h1>Mealshaker</h1>
-        <p>We made Mealshaker to help you find new places to eat and drink, wherever you are.</p>
+        <p>Mealshaker was born because we wanted a new, simple and fun way to explore places to eat and drink. Hungry?</p>
         <p>Tell your friends about Mealshaker!</p>
         <div class="share-buttons">
             <ul>
