--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -128,6 +128,7 @@ a {
         text-decoration: none;
         font-weight: 800;
         color: $color-main;
+        outline: none;
     }
 }
 
@@ -138,7 +139,7 @@ a, button {
 .icon {
     $iconSize: 20px;
     $borderSize: 2px;
-    $paddingSize: 4px;
+    $paddingSize: 12px;
 
 
     text-indent: -9999em;
@@ -147,6 +148,8 @@ a, button {
     width: $iconSize;
     height: $iconSize;
     padding: $paddingSize;
+    margin-left: 10px;
+    margin-top: 10px;
 
     &, &::after {
         display: block;
@@ -178,7 +181,7 @@ a, button {
 }
 
 header {
-    @include clearfix;
+    @include pie-clearfix();
     min-height: 20px;
 
     .loading &, .no-venue & {
