--- a/app/styles/rzslider.scss
+++ b/app/styles/rzslider.scss
@@ -1,3 +1,6 @@
+$barHeight: 4px;
+$pointerSize: 33px;
+
 rzslider {
   position: relative;
   display: block;
@@ -15,17 +18,17 @@ rzslider span {
 
 rzslider span.base {
   width: 100%;
-  height: 4px;
+  height: $barHeight;
   padding: 0;
 }
 
 rzslider span.bar {
   z-index: 0;
   width: 100%;
-  height: 4px;
+  height: $barHeight;
   background: white;
   border-radius: 2px;
-  top: 13px;
+  top: ($pointerSize - $barHeight) / 2;
 }
 
 rzslider span.bar.selection {
@@ -36,12 +39,12 @@ rzslider span.bar.selection {
 
 rzslider span.pointer {
   z-index: 2;
-  width: 30px;
-  height: 30px;
+  width: $pointerSize;
+  height: $pointerSize;
   cursor: pointer;
-  border-radius: 30px;
+  border-radius: $pointerSize;
   background: url(../images/icon-slider.png) no-repeat 50% 50% transparent;
-  background-size: 24px 24px;
+  background-size: $pointerSize;
 }
 
 rzslider span.bubble {
